Changelog
=========

0.24.0 (2019-02-19)
~~~~~~~~~~~~~~~~~~~
 * The project has moved to `Jazzband <https://jazzband.co/>`_. This is the
   first release under the new organization. The new repository URL is
   `<https://github.com/jazzband/django-taggit>`_.
 * Added support for Django 2.2.
 * Fixed a race condition in ``TaggableManager``.
 * Removed method ``ItemBase.bulk_lookup_kwargs()``.
 * Fixed view ``tagged_object_list`` to set ``queryset.model`` as
   ``ListView.model`` (was previously set as a ``ContentType`` instance).
 * ``_TaggableManager`` and ``TaggableManager`` now always call the parent
   class ``__init__``.
 * Removed ``TaggableRel`` and replaced uses with ``ManyToManyRel``.

0.23.0 (2018-08-07)
~~~~~~~~~~~~~~~~~~~
 * **Backwards incompatible:** Remove support for Django < 1.11
  * https://github.com/jazzband/django-taggit/pull/518
 * Added support for Django 2.1 and Python 3.7
  * https://github.com/jazzband/django-taggit/pull/536
 * Moved TagWidget value conversion from TagWidget.render() to TagWidget.format_value()
  * https://github.com/jazzband/django-taggit/pull/534

0.22.2 (2017-12-27)
~~~~~~~~~~~~~~~~~~~
 * Added support for Django 2.0
  * https://github.com/jazzband/django-taggit/pull/509
 * **Backwards incompatible:** Dropped support for EOL Python 3.3
  * https://github.com/jazzband/django-taggit/pull/512

0.22.1 (2017-04-22)
~~~~~~~~~~~~~~~~~~~
 * Update spanish translation
  * https://github.com/jazzband/django-taggit/pull/473
 * Add testing for Django 1.11 and Python 3.6
  * https://github.com/jazzband/django-taggit/pull/475
 * introduce isort and flake8 in the CI
  * https://github.com/jazzband/django-taggit/pull/476
 * [docs] Fixed links to external apps
  * https://github.com/jazzband/django-taggit/pull/481
 * Improved auto-slug in TagBase to support UUID pk
  * https://github.com/jazzband/django-taggit/pull/482
 * [docs] Added contribution guidelines
  * https://github.com/jazzband/django-taggit/pull/480

0.22.0 (2017-01-29)