@@ -10,7 +10,7 @@ from taggit.utils import edit_string_for_tags, parse_tags
 class TagWidget(forms.TextInput):
     def format_value(self, value):
         if value is not None and not isinstance(value, six.string_types):
-            value = edit_string_for_tags([o.tag for o in value.select_related("tag")])
+            value = edit_string_for_tags(value)
 
         return super(TagWidget, self).format_value(value)
 
@@ -26,3 +26,12 @@ class TagField(forms.CharField):
             raise forms.ValidationError(
                 _("Please provide a comma-separated list of tags.")
             )
+
+    def has_changed(self, initial_value, data_value):
+        initial_value = [tag.name for tag in initial_value]
+        initial_value.sort()
+        try:
+            data_value = self.clean(data_value)
+        except forms.ValidationError:
+            pass
+        return initial_value != data_value
